; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/msi/extr_patch.c_msi_apply_patch_db.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/msi/extr_patch.c_msi_apply_patch_db.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_15__ = type { i32, i32 }
%struct.TYPE_16__ = type { i32 }
%struct.TYPE_14__ = type { i32, i32, i32, i32 }

@ERROR_SUCCESS = common dso_local global i64 0, align 8
@MSIPATCHSTATE_APPLIED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.TYPE_15__*, %struct.TYPE_16__*, %struct.TYPE_14__*)* @msi_apply_patch_db to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @msi_apply_patch_db(%struct.TYPE_15__* %0, %struct.TYPE_16__* %1, %struct.TYPE_14__* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.TYPE_15__*, align 8
  %6 = alloca %struct.TYPE_16__*, align 8
  %7 = alloca %struct.TYPE_14__*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32**, align 8
  store %struct.TYPE_15__* %0, %struct.TYPE_15__** %5, align 8
  store %struct.TYPE_16__* %1, %struct.TYPE_16__** %6, align 8
  store %struct.TYPE_14__* %2, %struct.TYPE_14__** %7, align 8
  %11 = load i64, i64* @ERROR_SUCCESS, align 8
  store i64 %11, i64* %9, align 8
  %12 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %13 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 4
  %15 = call i32** @msi_split_string(i32 %14, i8 signext 59)
  store i32** %15, i32*** %10, align 8
  store i64 0, i64* %8, align 8
  br label %16

16:                                               ; preds = %60, %3
  %17 = load i32**, i32*** %10, align 8
  %18 = icmp ne i32** %17, null
  br i1 %18, label %19, label %29

19:                                               ; preds = %16
  %20 = load i32**, i32*** %10, align 8
  %21 = load i64, i64* %8, align 8
  %22 = getelementptr inbounds i32*, i32** %20, i64 %21
  %23 = load i32*, i32** %22, align 8
  %24 = icmp ne i32* %23, null
  br i1 %24, label %25, label %29

25:                                               ; preds = %19
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* @ERROR_SUCCESS, align 8
  %28 = icmp eq i64 %26, %27
  br label %29

29:                                               ; preds = %25, %19, %16
  %30 = phi i1 [ false, %19 ], [ false, %16 ], [ %28, %25 ]
  br i1 %30, label %31, label %63

31:                                               ; preds = %29
  %32 = load %struct.TYPE_15__*, %struct.TYPE_15__** %5, align 8
  %33 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %34 = load i32**, i32*** %10, align 8
  %35 = load i64, i64* %8, align 8
  %36 = getelementptr inbounds i32*, i32** %34, i64 %35
  %37 = load i32*, i32** %36, align 8
  %38 = call i64 @apply_substorage_transform(%struct.TYPE_15__* %32, %struct.TYPE_16__* %33, i32* %37)
  store i64 %38, i64* %9, align 8
  %39 = load i64, i64* %9, align 8
  %40 = load i64, i64* @ERROR_SUCCESS, align 8
  %41 = icmp eq i64 %39, %40
  br i1 %41, label %42, label %59

42:                                               ; preds = %31
  %43 = load %struct.TYPE_15__*, %struct.TYPE_15__** %5, align 8
  %44 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %43, i32 0, i32 1
  %45 = load i32, i32* %44, align 4
  %46 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %47 = call i64 @patch_set_offsets(i32 %45, %struct.TYPE_14__* %46)
  store i64 %47, i64* %9, align 8
  %48 = load i64, i64* %9, align 8
  %49 = load i64, i64* @ERROR_SUCCESS, align 8
  %50 = icmp eq i64 %48, %49
  br i1 %50, label %51, label %58

51:                                               ; preds = %42
  %52 = load %struct.TYPE_15__*, %struct.TYPE_15__** %5, align 8
  %53 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %54 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %57 = call i64 @patch_add_media(%struct.TYPE_15__* %52, i32 %55, %struct.TYPE_14__* %56)
  store i64 %57, i64* %9, align 8
  br label %58

58:                                               ; preds = %51, %42
  br label %59

59:                                               ; preds = %58, %31
  br label %60

60:                                               ; preds = %59
  %61 = load i64, i64* %8, align 8
  %62 = add i64 %61, 1
  store i64 %62, i64* %8, align 8
  br label %16

63:                                               ; preds = %29
  %64 = load i32**, i32*** %10, align 8
  %65 = call i32 @msi_free(i32** %64)
  %66 = load i64, i64* %9, align 8
  %67 = load i64, i64* @ERROR_SUCCESS, align 8
  %68 = icmp ne i64 %66, %67
  br i1 %68, label %69, label %71

69:                                               ; preds = %63
  %70 = load i64, i64* %9, align 8
  store i64 %70, i64* %4, align 8
  br label %93

71:                                               ; preds = %63
  %72 = load %struct.TYPE_15__*, %struct.TYPE_15__** %5, align 8
  %73 = call i64 @patch_set_media_source_prop(%struct.TYPE_15__* %72)
  store i64 %73, i64* %9, align 8
  %74 = load i64, i64* %9, align 8
  %75 = load i64, i64* @ERROR_SUCCESS, align 8
  %76 = icmp ne i64 %74, %75
  br i1 %76, label %77, label %79

77:                                               ; preds = %71
  %78 = load i64, i64* %9, align 8
  store i64 %78, i64* %4, align 8
  br label %93

79:                                               ; preds = %71
  %80 = load %struct.TYPE_16__*, %struct.TYPE_16__** %6, align 8
  %81 = call i32 @is_uninstallable(%struct.TYPE_16__* %80)
  %82 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %83 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %82, i32 0, i32 2
  store i32 %81, i32* %83, align 4
  %84 = load i32, i32* @MSIPATCHSTATE_APPLIED, align 4
  %85 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %86 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %85, i32 0, i32 1
  store i32 %84, i32* %86, align 4
  %87 = load %struct.TYPE_15__*, %struct.TYPE_15__** %5, align 8
  %88 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %87, i32 0, i32 0
  %89 = load %struct.TYPE_14__*, %struct.TYPE_14__** %7, align 8
  %90 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %89, i32 0, i32 0
  %91 = call i32 @list_add_tail(i32* %88, i32* %90)
  %92 = load i64, i64* @ERROR_SUCCESS, align 8
  store i64 %92, i64* %4, align 8
  br label %93

93:                                               ; preds = %79, %77, %69
  %94 = load i64, i64* %4, align 8
  ret i64 %94
}

declare dso_local i32** @msi_split_string(i32, i8 signext) #1

declare dso_local i64 @apply_substorage_transform(%struct.TYPE_15__*, %struct.TYPE_16__*, i32*) #1

declare dso_local i64 @patch_set_offsets(i32, %struct.TYPE_14__*) #1

declare dso_local i64 @patch_add_media(%struct.TYPE_15__*, i32, %struct.TYPE_14__*) #1

declare dso_local i32 @msi_free(i32**) #1

declare dso_local i64 @patch_set_media_source_prop(%struct.TYPE_15__*) #1

declare dso_local i32 @is_uninstallable(%struct.TYPE_16__*) #1

declare dso_local i32 @list_add_tail(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
